fix(main activity logic and refactoring files)

--- a/app/src/main/res/layout/scan_button.xml
+++ b/app/src/main/res/layout/scan_button.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageButton
+        android:id="@+id/scan_btn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
