--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,7 +4,7 @@
         android:id="@+id/home"
         android:enabled="true"
         android:icon="@drawable/baseline_home_24"
-        android:title="Home"/>
+        android:title="@string/home"/>
     <item
         android:id="@+id/booked"
         android:enabled="false"
@@ -13,5 +13,5 @@
         android:id="@+id/history"
         android:enabled="true"
         android:icon="@drawable/baseline_history_24"
-        android:title="History"/>
+        android:title="@string/history"/>
 </menu>
