--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".activity.main.MainActivity"
     android:layout_height="match_parent">
     <fragment
         android:id="@+id/flFragment"
