--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#295FA6</color>
+    <color name="textColor">#3F3F3F</color>
+    <color name="gray1">#D9D9D9</color>
 </resources>
