--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:fontFamily">@font/poppins</item>
     </style>
 
     <style name="Theme.Scanocular" parent="Base.Theme.Scanocular" />
