--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="16dp"
-    android:paddingTop="28dp"
     tools:context=".activity.register.RegisterActivity">
     <ScrollView
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,6 +19,7 @@
         android:layout_height="wrap_content"
         android:paddingBottom="20dp">
         <TextView
+            android:layout_marginTop="16dp"
             android:id="@+id/login_welcome_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -105,10 +105,60 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/email_layout"
+            android:id="@+id/ttl_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/nama_layout"
+            android:layout_marginTop="10dp"
+            >
+            <TextView
+                android:id="@+id/ttl_log_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Tanggal Lahir"
+                android:layout_alignParentStart="true"
+                android:textSize="14sp"
+                android:layout_marginVertical="5dp"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+
+                />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_below="@+id/ttl_log_label"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/ttl_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="emailAddress"
+                    android:editable="false"
+                    android:background="@drawable/edit_text_bg"
+                    android:paddingHorizontal="20dp"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:paddingVertical="10dp"
+                    tools:ignore="LabelFor" />
+                <Button
+                    android:id="@+id/btPickDate"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/baseline_date_range_24"
+                    android:layout_marginEnd="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/email_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ttl_layout"
             android:layout_marginTop="10dp"
             >
             <TextView
